--- a/index.html
+++ b/index.html
@@ -35,36 +35,52 @@
                 feedback to us</p>
         </div>
         <div class="div2">
-            <div class="smallbox">
-                <img src="images/Rectangle 3.png" alt="">
-                <p class="didi"></p>
-                <p class="patara"></p>
+            <div class="div3">
+                <div class="smallbox">
+                    <img src="images/Rectangle 2.png" alt="">
+                    <p class="didi">FLIGHT BOOKING</p>
+                    <p class="patara">We hope you can visit and enjoy it
+                        ths beautiful places with your 
+                        friend and favorite people</p>
+                </div>
+                <div class="smallbox">
+                    <img src="images/Rectangle 3.png" alt="">
+                    <p class="didi">HOTEL & RESORT BOOKING</p>
+                    <p class="patara">We hope you can visit and enjoy it
+                        ths beautiful places with your 
+                        friend and favorite people</p>
+                </div>
+                <div class="smallbox">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <p class="didi">FAMILY TRIP PLANNER</p>
+                    <p class="patara">We hope you can visit and enjoy it
+                        ths beautiful places with your 
+                        friend and favorite people</p>
+                </div>
             </div>
-            <div class="smallbox">
-                <img src="images/Rectangle 3.png" alt="">
-                <p class="didi"></p>
-                <p class="patara"></p>
+            <div class="div4">
+                <div class="smallbox">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <p class="didi">CRUISE TOUR</p>
+                    <p class="patara">We hope you can visit and enjoy it
+                        ths beautiful places with your 
+                        friend and favorite people</p>
+                </div>
+                <div class="smallbox">
+                    <img src="images/Rectangle 6.png" alt="">
+                    <p class="didi">FIRE CAMP</p>
+                    <p class="patara">We hope you can visit and enjoy it
+                        ths beautiful places with your 
+                        friend and favorite people</p>
+                </div>
+                <div class="smallbox">
+                    <img src="images/Rectangle 7.png" alt="">
+                    <p class="didi">CORPORATE HOLYDAYS</p>
+                    <p class="patara">We hope you can visit and enjoy it
+                        ths beautiful places with your 
+                        friend and favorite people</p>
             </div>
-            <div class="smallbox">
-                <img src="images/Rectangle 3.png" alt="">
-                <p class="didi"></p>
-                <p class="patara"></p>
-            </div>
-            <div class="smallbox">
-                <img src="images/Rectangle 3.png" alt="">
-                <p class="didi"></p>
-                <p class="patara"></p>
-            </div>
-            <div class="smallbox">
-                <img src="images/Rectangle 3.png" alt="">
-                <p class="didi"></p>
-                <p class="patara"></p>
-            </div>
-            <div class="smallbox">
-                <img src="images/Rectangle 3.png" alt="">
-                <p class="didi"></p>
-                <p class="patara"></p>
-            </div>
+                </div>
         </div>
     </section>
 </body>
