--- a/index.html
+++ b/index.html
@@ -1,87 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <img src="images/149418694_1371911026498334_3982599470388607159_n 1.png#" alt="" class="logo">
-            <div class="diva">
-                <a href="#" class="a">HOME</a>
-                <a href="#" class="a">ABOUT US</a>
-                <a href="#" class="a">OUR SERVICES</a>
-                <a href="#" class="a">TOUR PACKAGE</a>
-            </div>
-        </nav>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="reset.css" />
+  </head>
+  <body>
+    <header class="header">
+      <img
+        src="images/149418694_1371911026498334_3982599470388607159_n 1.png"
+      />
+      <nav class="nav">
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT US</a></li>
+          <li><a href="#">OUR SERVICES</a></li>
+          <li><a href="#">TOUR PACKAGE</a></li>
+        </ul>
+      </nav>
     </header>
-    <section>
-        <img src="images/Rectangle 1.png" alt="">
-        <h1 class="img-text1">Discover Greece</h1>
-        <h5 class="img-text2">TRAVEL WITH UNIQUE EXPERIENCE</h5>
+    <section class="s-1">
+      <img src="images/Rectangle 1.png" alt="" />
+      <h1 class="img-text1">Discover Greece</h1>
+      <h5 class="img-text2">TRAVEL WITH UNIQUE EXPERIENCE</h5>
     </section>
     <section>
-        <div class="div1">
-            <p class="discover">DISCOVER</p>
-            <p class="hot">Our Hot Services</p>
-            <p class="hope">We hope you can visit and
-                ths beautiful places with 
-                your friend and favorite 
-                So you can share your
-                feedback to us</p>
+      <div class="div1">
+        <p class="discover">DISCOVER</p>
+        <p class="hot">Our Hot Services</p>
+        <p class="hope">
+          We hope you can visit and ths beautiful places with your friend and
+          favorite So you can share your feedback to us
+        </p>
+      </div>
+      <div class="div2">
+        <div class="div3">
+          <div class="smallbox">
+            <img src="images/Rectangle 2.png" alt="" />
+            <p class="didi">FLIGHT BOOKING</p>
+            <p class="patara">
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="smallbox">
+            <img src="images/Rectangle 3.png" alt="" />
+            <p class="didi">HOTEL & RESORT BOOKING</p>
+            <p class="patara">
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="smallbox">
+            <img src="images/Rectangle 4.png" alt="" />
+            <p class="didi">FAMILY TRIP PLANNER</p>
+            <p class="patara">
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
         </div>
-        <div class="div2">
-            <div class="div3">
-                <div class="smallbox">
-                    <img src="images/Rectangle 2.png" alt="">
-                    <p class="didi">FLIGHT BOOKING</p>
-                    <p class="patara">We hope you can visit and enjoy it
-                        ths beautiful places with your 
-                        friend and favorite people</p>
-                </div>
-                <div class="smallbox">
-                    <img src="images/Rectangle 3.png" alt="">
-                    <p class="didi">HOTEL & RESORT BOOKING</p>
-                    <p class="patara">We hope you can visit and enjoy it
-                        ths beautiful places with your 
-                        friend and favorite people</p>
-                </div>
-                <div class="smallbox">
-                    <img src="images/Rectangle 4.png" alt="">
-                    <p class="didi">FAMILY TRIP PLANNER</p>
-                    <p class="patara">We hope you can visit and enjoy it
-                        ths beautiful places with your 
-                        friend and favorite people</p>
-                </div>
-            </div>
-            <div class="div4">
-                <div class="smallbox">
-                    <img src="images/Rectangle 5.png" alt="">
-                    <p class="didi">CRUISE TOUR</p>
-                    <p class="patara">We hope you can visit and enjoy it
-                        ths beautiful places with your 
-                        friend and favorite people</p>
-                </div>
-                <div class="smallbox">
-                    <img src="images/Rectangle 6.png" alt="">
-                    <p class="didi">FIRE CAMP</p>
-                    <p class="patara">We hope you can visit and enjoy it
-                        ths beautiful places with your 
-                        friend and favorite people</p>
-                </div>
-                <div class="smallbox">
-                    <img src="images/Rectangle 7.png" alt="">
-                    <p class="didi">CORPORATE HOLYDAYS</p>
-                    <p class="patara">We hope you can visit and enjoy it
-                        ths beautiful places with your 
-                        friend and favorite people</p>
-            </div>
-                </div>
+        <div class="div4">
+          <div class="smallbox">
+            <img src="images/Rectangle 5.png" alt="" />
+            <p class="didi">CRUISE TOUR</p>
+            <p class="patara">
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="smallbox">
+            <img src="images/Rectangle 6.png" alt="" />
+            <p class="didi">FIRE CAMP</p>
+            <p class="patara">
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
+          <div class="smallbox">
+            <img src="images/Rectangle 7.png" alt="" />
+            <p class="didi">CORPORATE HOLYDAYS</p>
+            <p class="patara">
+              We hope you can visit and enjoy it ths beautiful places with your
+              friend and favorite people
+            </p>
+          </div>
         </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
